--- a/project_ux/i18n/es.po
+++ b/project_ux/i18n/es.po
@@ -1,46 +1,68 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * project_usability
-# 
-# Translators:
-# Juan José Scarafía <scarafia.juanjose@gmail.com>, 2017
-# Nicolas Mac Rouillon <nmr@ingadhoc.com>, 2018
+# 	* project_ux
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 9.0c\n"
+"Project-Id-Version: Odoo Server 11.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-31 16:15+0000\n"
-"PO-Revision-Date: 2018-01-31 16:15+0000\n"
-"Last-Translator: Nicolas Mac Rouillon <nmr@ingadhoc.com>, 2018\n"
-"Language-Team: Spanish (https://www.transifex.com/adhoc/teams/46451/es/)\n"
+"POT-Creation-Date: 2018-06-18 17:57+0000\n"
+"PO-Revision-Date: 2018-06-18 14:58-0300\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: \n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
-#. module: project_usability
-#: model:ir.ui.view,arch_db:project_usability.edit_project
+#. module: project_ux
+#: model:ir.ui.view,arch_db:project_ux.edit_project
 msgid "Dates"
 msgstr "Fechas"
 
-#. module: project_usability
-#: model:ir.ui.view,arch_db:project_usability.edit_project
+#. module: project_ux
+#: model:ir.ui.view,arch_db:project_ux.view_task_search_form
+msgid "Is Sub-Task"
+msgstr "Is Sub-Task"
+
+#. module: project_ux
+#: model:ir.ui.view,arch_db:project_ux.view_task_search_form
+msgid "Is Task"
+msgstr "Is Task"
+
+#. module: project_ux
+#: model:ir.model,name:project_ux.model_project_project
+msgid "Project"
+msgstr "Proyecto"
+
+#. module: project_ux
+#: model:ir.ui.view,arch_db:project_ux.edit_project
 msgid "Project Stages"
 msgstr "Etapas del proyecto"
 
-#. module: project_usability
-#: model:ir.model,name:project_usability.model_project_task
+#. module: project_ux
+#: model:ir.actions.act_window,help:project_ux.act_project_project_2_project_sub_task_all
+msgid "Pulse aquí para añadir un nuevo tareas"
+msgstr "Pulse aquí para añadir un nuevo tareas"
+
+#. module: project_ux
+#: model:ir.actions.act_window,name:project_ux.act_project_project_2_project_sub_task_all
+msgid "Sub Tasks"
+msgstr "Sub Tasks"
+
+#. module: project_ux
+#: model:ir.ui.view,arch_db:project_ux.view_project_kanban
+msgid "Sub:"
+msgstr "Sub:"
+
+#. module: project_ux
+#: model:ir.model,name:project_ux.model_project_task
 msgid "Task"
 msgstr "Tarea"
 
-#. module: project_usability
-#: model:ir.ui.view,arch_db:project_usability.view_task_form2
+#. module: project_ux
+#: model:ir.ui.view,arch_db:project_ux.view_task_form2
 msgid "Task Template"
-msgstr ""
-
-#. module: project_usability
-#: model:ir.model.fields,field_description:project_usability.field_project_task_template_task
-#: model:ir.model.fields,field_description:project_usability.field_project_task_template_task_id
-msgid "Template Task"
-msgstr ""
+msgstr "Task Template"
