[ADD] project_ux: tasks stages page in project form
closes ingadhoc/project#119

Signed-off-by: Juan Carreras <jc@adhoc.com.ar>

--- a/project_ux/i18n/es.po
+++ b/project_ux/i18n/es.po
@@ -61,3 +61,8 @@ msgid ""
 "no email will be send. After the stage changes, this value returns to False "
 "so that new stage changes will send emails."
 msgstr ""
+
+#. module: project_ux
+#: model_terms:ir.ui.view,arch_db:project_ux.edit_project
+msgid "Tasks Stages"
+msgstr "Etapas de tareas"
